test/testfile_emulator-5554_23.txt
--------- beginning of main
F/BIFUZ_BROADCAST( 1489): adb -s emulator-5554 shell am broadcast -n com.android.providers.downloads/com.android.providers.downloads.DownloadReceiver 
I/CalendarProvider2( 1470): Sending notification intent: Intent { act=android.intent.action.PROVIDER_CHANGED dat=content://com.android.calendar }
W/ContentResolver( 1470): Failed to get type for: content://com.android.calendar (Unknown URL content://com.android.calendar)
D/AndroidRuntime( 1491): 
D/AndroidRuntime( 1491): >>>>>> AndroidRuntime START com.android.internal.os.RuntimeInit <<<<<<
D/AndroidRuntime( 1491): CheckJNI is ON
D/dalvikvm( 1491): Trying to load lib libjavacore.so 0x0
D/dalvikvm( 1491): Added shared lib libjavacore.so 0x0
D/dalvikvm( 1491): Trying to load lib libnativehelper.so 0x0
D/dalvikvm( 1491): Added shared lib libnativehelper.so 0x0
D/dalvikvm( 1491): No JNI_OnLoad found in libnativehelper.so 0x0, skipping init
I/WearableConn(  484): Connecting via TCP to /10.0.2.2:5601
W/WearableConn(  484): Error writing to device, error: failed to connect to /10.0.2.2 (port 5601): connect failed: ECONNREFUSED (Connection refused)
I/WearableConn(  484): Socket closed
I/WearableConn(  484): Waiting 4.0 seconds to retry connection
D/dalvikvm( 1491): Note: class Landroid/app/ActivityManagerNative; has 179 unimplemented (abstract) methods
E/memtrack( 1491): Couldn't load memtrack module (No such file or directory)
E/android.os.Debug( 1491): failed to load memtrack module: -2
D/AndroidRuntime( 1491): Calling main entry com.android.commands.am.Am
D/AndroidRuntime( 1491): Shutting down VM
D/jdwp    ( 1491): Got wake-up signal, bailing out of select
D/dalvikvm( 1491): Debugger has detached; object registry had 1 entries
D/AndroidRuntime( 1009): Shutting down VM
W/dalvikvm( 1009): threadid=1: thread exiting with uncaught exception (group=0xb3a40d70)
--------- beginning of system
E/AndroidRuntime( 1009): FATAL EXCEPTION: main
E/AndroidRuntime( 1009): Process: android.process.media, PID: 1009
E/AndroidRuntime( 1009): java.lang.RuntimeException: Unable to start receiver com.android.providers.downloads.DownloadReceiver: java.lang.NullPointerException
E/AndroidRuntime( 1009): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2439)
E/AndroidRuntime( 1009): 	at android.app.ActivityThread.access$1700(ActivityThread.java:138)
E/AndroidRuntime( 1009): 	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1285)
E/AndroidRuntime( 1009): 	at android.os.Handler.dispatchMessage(Handler.java:102)
E/AndroidRuntime( 1009): 	at android.os.Looper.loop(Looper.java:136)
E/AndroidRuntime( 1009): 	at android.app.ActivityThread.main(ActivityThread.java:5026)
E/AndroidRuntime( 1009): 	at java.lang.reflect.Method.invokeNative(Native Method)
E/AndroidRuntime( 1009): 	at java.lang.reflect.Method.invoke(Method.java:515)
E/AndroidRuntime( 1009): 	at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:777)
E/AndroidRuntime( 1009): 	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:602)
E/AndroidRuntime( 1009): 	at dalvik.system.NativeStart.main(Native Method)
E/AndroidRuntime( 1009): Caused by: java.lang.NullPointerException
E/AndroidRuntime( 1009): 	at com.android.providers.downloads.DownloadReceiver.onReceive(DownloadReceiver.java:65)
E/AndroidRuntime( 1009): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2432)
E/AndroidRuntime( 1009): 	... 10 more
